<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controlador.MultimediaAdapter">

    <ImageView
        android:id="@+id/paisajeEjmploGalleria"
        android:layout_width="wrap_content"
        android:layout_height="277dp"
        android:contentDescription="@string/expSrcpaisaje"
        android:src="@drawable/ejmplo_paisaje" />

    <TextView
        android:id="@+id/expLocationGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expLocationGallery"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/expDateGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expDateGallery"
        android:textAlignment="center"
        android:textColor="#FF0000" />
</LinearLayout>